@@ -1,3 +1,7 @@
+Mon Mar 16 11:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
+
+	* gtkgame.c: Panel bug fixed (crash at startup)
+
 Mon Mar 15 17:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
 
 	* sound.c: Wait when multiple sounds attempted to be played (windows)
